--- a/client/style.css
+++ b/client/style.css
@@ -132,8 +132,8 @@ input {
 }
 
 #todo h2 {
-  background-color: #ffff;
-  color: #4283d0;
+  background-color: #91b7e4;
+  color: #ffff;
   font-size: 25px;
   padding: 1% 0;
   width: 30%;
@@ -141,8 +141,22 @@ input {
   margin-right: auto;
   text-align: center;
   border-radius: 20px;
+  margin-bottom: 60px;
 }
 
 #addTodo {
   cursor: pointer;
+}
+
+.todo-list h3 {
+  color: #4283d0;
+  background-color: #ffff;
+  border-radius: 40px;
+  margin-bottom: 20px;
+  font-weight: 300;
+  width: 60%;
+  padding: 2% 0;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
 }
